add_subdirectory(convolution_mod)
add_subdirectory(factorize)
add_subdirectory(matrix_product)
add_subdirectory(system_of_linear_equations)
add_subdirectory(matrix_det)
add_subdirectory(inverse_matrix)
add_subdirectory(point_add_range_sum)
add_subdirectory(point_set_range_composite)
add_subdirectory(range_affine_point_get)
add_subdirectory(range_affine_range_sum)
add_subdirectory(range_chmin_chmax_add_range_sum)