add_executable(test_modular tests/test_modular.cpp)
add_executable(test_combinatorial tests/test_combinatorial.cpp)
add_executable(test_matrix tests/test_matrix.cpp)
target_link_libraries(test_modular PRIVATE Catch2::Catch2WithMain)
target_link_libraries(test_combinatorial PRIVATE Catch2::Catch2WithMain)
target_link_libraries(test_matrix PRIVATE Catch2::Catch2WithMain)
